# SPIRA-Inference-Service

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  build.sh  docker-compose.yml  init.py  model-example.ipynb  push-image.sh  push_image.sh  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
envs/: message_listener.env  message_service.env  model_register.env  simple_storage.env
envs/mlflow/: mlflow.env  mysql.env
model_register_server/mlflow/: .tool-versions  Dockerfile  pyproject.toml
src/: main.py  settings.py
src/adapters/listener/: message_listener.py
src/adapters/message_service/: nats_adapter.py
src/adapters/model_register/: mlflow_adapter.py  model_base.py
src/adapters/model_repository/: mlflow_adapter.py  model_base.py
src/adapters/simple_storage/: minio_adapter.py
src/core/model/: exception.py  inference.py  message_service.py  result.py
src/core/ports/: message_service_port.py  model_register_port.py  ports.py  simple_storage_port.py
src/core/services/: message_listener_service.py
tests/integration_tests/adapters/message_service/: test_adapter.py
tests/integration_tests/adapters/simple_storage/: test_1_connection.py  test_2_adapter.py
tests/mocks/: minio_mock.py  mlflow_mock.py  nats_mock.py
tests/unit_tests/adapters/: test_minio_adapter.py  test_mlflow_adapter.py  test_nats_adapter.py
tests/unit_tests/ports/: test_message_service_port.py  test_model_register_port.py  test_simple_storage_port.py
