[tool.poetry]
name = "spira-inference-service"
version = "0.1.0"
description = "inference service for SPIRA project"
authors = ["Vitor Daisuke Tamae"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.1"
minio = "^7.1.10"
nats-py = "^2.1.4"
mlflow = "^1.27.0"
mock = "^4.0.3"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]