[tool.poetry]
name = "mlflow-server"
version = "0.1.0"
description = "MLFlow server to register ML models"
authors = ["daitamae <dai.tamae@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mlflow = "^1.28.0"
boto3 = "^1.24.66"
PyMySQL = "^1.0.2"
cryptography = "^37.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
